[tool.poetry]
name = "digital_wallet"
version = "0.1.0"
description = ""
authors = ["Dawid K. and Kinnary R."]
readme = "README.md"
packages = [
    {include="digital_wallet", from="src"}
]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
